# launcher

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  package.json  readme.md
.github/workflows/: build.yml
app/: client.cpp  client.hpp  main.cpp
app/cefview/: app.cpp  client.cpp  client.hpp
app/global/: config.hpp
app/internal/: downloadmanager.cpp  downloadmanager.hpp  fs.cpp  fs.hpp  gamemanager.cpp  gamemanager.hpp  ipc.cpp  ipc.hpp
app/resources/: binaryresourceprovider.cpp
engines/wwdl/: package.json  tsconfig.json
engines/wwdl/src/: gist.ts  index.ts  regionserver.ts
shared/windows/assets/: app.manifest  app.rc
tools/: build.ts
tools/utils/: buildtobin.ts
webapp/: package.json  vite.config.ts
webapp/src/: App.tsx  i18n.ts  i18next.d.ts  index.css  index.tsx
webapp/src/components/: gamecard.tsx  header.tsx  sidebar.tsx
webapp/src/components/dialog/: installdialog.tsx
webapp/src/data/: game.ts  gameitems.ts
webapp/src/hooks/: useGlobalState.tsx  useKeyboardNavigation.ts
webapp/src/lib/: downloadapi.ts  hoyoapi.tsx  rawgapi.ts  systemapi.ts  wuwafetch.ts
webapp/src/locales/: cn-ZH.json  en-US.json  id-ID.json  ja-JP.json  ru-RU.json  th-TH.json
webapp/src/pages/: downloads.tsx  gamedetail.tsx  home.tsx  library.tsx  settings.tsx  store.tsx
webapp/src/pages/games/: wuwa.tsx
webapp/src/pages/settings/: hooks.ts  index.tsx  types.ts  utils.ts
webapp/src/pages/settings/components/: AccountSettings.tsx  DisplaySettings.tsx  GeneralSettings.tsx  LanguageSettings.tsx  NotificationSettings.tsx  PrivacySettings.tsx  StorageSettings.tsx  SystemSettings.tsx  index.ts
webapp/src/types/: globalState.ts
webapp/src/utils/: gameManager.ts  languageUtils.ts
